# 2024_kn41_nm

./: .gitignore  README.md  _config.yml  _ config.yml
.github/workflows/: codecov.yml  manual.yml  python-app.yml
1_lab/: README.md
2_lab/: 2.ipynb
3_lab/: 1.csv  1.ipynb  2.ipynb  3.ipynb  mine.ipynb
init/: README.md
mmdo/: 2_nb.ipynb  nb.ipynb
numerical_methods/1_lab/: my.ipynb  my.py
numerical_methods/2_lab/: README.md  text.txt
numerical_methods/3_lab/: 1.csv  mine.ipynb
testing/1_lab/: 1.py  Pipfile  README.md
testing/1_lab/env_with_pipenv/: .env  1.py  Pipfile
testing/1_lab/env_with_poetry/: 1.py  pyproject.toml
testing/2_lab/: .coverage  .coveragerc  README.md  README.readme  pyproject.toml
testing/2_lab/assert/: main.py
testing/2_lab/program/: bank.py  main.py  savings.py
testing/2_lab/tests/: main.py  test_pytest.py  test_savings.py  test_units.py
testing/lab/: README.md
