[tool.poetry]
name = "2-lab"
version = "0.1.0"
description = ""
authors = ["bbuhyl <bbuhyl@cisco.com>"]
readme = "README.readme"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.14.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
