[tool.poetry]
name = "env-with-poetry"
version = "0.1.0"
description = "Example project to works with poetry"
authors = ["bobas <email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.2"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
